--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ uart_16550 = "0.3.0"
 pc-keyboard = "0.7.0"
 bit_field = "0.10.2"
 good_memory_allocator = "0.1.7"
-pci = {path = "pci",version="0.0.1"}
+pci = {path = "pci",package="pci-tmp",version="0.0.1"}
 vte = "0.13.0"
 colorz = "1.1.2"
 xhci = "0.9.2"
