--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,10 +15,13 @@ uart_16550 = "0.3.0"
 pc-keyboard = "0.7.0"
 bit_field = "0.10.2"
 good_memory_allocator = "0.1.7"
-pci = {path = "pci",package="pci-tmp",version="0.0.1"}
 vte = "0.13.0"
 colorz = "1.1.2"
 xhci = "0.9.2"
+
+[dependencies.pci]
+package = "pci-for-framework"
+version = "0.0.1"
 
 [dependencies.log]
 version = "0.4.22"
