--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,8 @@ name = "good-os-framework"
 version = "0.1.0"
 edition = "2021"
 repository = "https://github.com/zzjrabbit/good-os-framework"
+description = "A simple operating system framework for framekernel written in Rust"
+license = "MIT/Apache-2.0"
 
 [dependencies]
 limine = "0.2.0"
