--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,7 +26,8 @@ colorz = "1.1.2"
 xhci = "0.9.2"
 
 [dependencies.os-terminal]
-version = "0.2.7"
+version = "0.3.4"
+features = ["truetype"]
 # path = "../os-terminal"
 
 [dependencies.pci]
