--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,11 @@ good_memory_allocator = "0.1.7"
 vte = "0.13.0"
 colorz = "1.1.2"
 xhci = "0.9.2"
+talc = "4.4.1"
+
+[dependencies.time]
+version = "0.3.36"
+default-features = false
 
 [dependencies.os-terminal]
 version = "0.3.7"
